--- a/readme
+++ b/readme
@@ -19,3 +19,6 @@ References:
   
  - The poster + sprite at start menu + 1 level background are self drawn by AutoDesk Sketchbook.
   
+- Demo clip: 
+  + PC Ver: https://www.youtube.com/watch?v=W-4hx7lglQ8&feature=youtu.be
+  + WebGL Ver: https://www.youtube.com/watch?v=eqNG4JykFrE&feature=youtu.be
