--- a/readme
+++ b/readme
@@ -22,3 +22,5 @@ References:
 - Demo clip: 
   + PC Ver: https://www.youtube.com/watch?v=W-4hx7lglQ8&feature=youtu.be
   + WebGL Ver: https://www.youtube.com/watch?v=eqNG4JykFrE&feature=youtu.be
+
+Update: a new bug arrive: after putting 3 gems into the door, it opens but do not go to the next level. This is new, before testing has been success. Further fix needed.
