--- a/readme
+++ b/readme
@@ -24,3 +24,4 @@ References:
   + WebGL Ver: https://www.youtube.com/watch?v=eqNG4JykFrE&feature=youtu.be
 
 Update: a new bug arrive: after putting 3 gems into the door, it opens but do not go to the next level. This is new, before testing has been success. Further fix needed.
+Google Drive link for full project: https://drive.google.com/open?id=19A7Y1ch1wGrm6WfUDiFBm_NSnfCUfST3
